# MSc_zephyr

./: CMakeLists.txt  README.md  prj.conf
TestAccel/: main.c
matmul/: defines.h  header.h  main.c  matrix.c  multiply.c
matmulUC0/: common.h  header.h  main.c  matrix.c  matrix.h  multiply.c  single_thread.elf
matmulUC1/: common.h  header.h  main.c  matrix.c  matrix.h  multiply.c
matmulUC1_/: common.h  header.h  main.c  matrix.c  matrix.h  multiply.c
matmulUC2/: common.h  header.h  main.c  matrix.c  multiply.c  multiply.h
matmulUC3/: common.h  header.h  main.c  matrix.c  matrix.h
nnUC0/: common.h  data.h  data10.h  header.h  main.c  multiply.c  multiply.h  nn.c  nn.h
nnUC1/: common.h  header.h  main.c  multiply.h
nnUC2/: common.h  header.h  main.c  weights.h
nnUC3/: common.h  data.h  data100.h  header.h  main.c  multiply.c  nn.c  nn.h
single_thread/: header.h  main.c  matrix.h
src/: defines.h  header.h  main.c  matrix.h  multiply.h
test_accel/: main.c
